--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preload" href="%PUBLIC_URL%/fonts/opensans.woff2" as="font">
+  <link rel="preload" href="%PUBLIC_URL%/fonts/opensansbold.woff2" as="font">
+  <link rel="preload" href="%PUBLIC_URL%/fonts/opensanslight.woff2" as="font">
 
   <title>Avto-moto</title>
 </head>
