--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
   <link rel="preload" href="%PUBLIC_URL%/fonts/opensans.woff2" as="font">
   <link rel="preload" href="%PUBLIC_URL%/fonts/opensansbold.woff2" as="font">
   <link rel="preload" href="%PUBLIC_URL%/fonts/opensanslight.woff2" as="font">
+  <meta name="description" content="Author: V. Nesvit. Avto-moto app">
 
   <title>Avto-moto</title>
 </head>
 
-<body>
+<body class="body">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
